--- a/node/views/classify.jade
+++ b/node/views/classify.jade
@@ -10,6 +10,7 @@ block content
         img(class="contained" id="raw_image", src='data:image/jpg;base64,#{imageData}')
         canvas(class="contained bottom" id='body_canvas')
         canvas(class="contained top" id='face_canvas')
+        canvas(class="contained top" id='detect_canvas')
 
     <ul id="timings">Classify time #{classifyTime}ms
         
@@ -19,6 +20,7 @@ block content
     script.
         drawBox("drawing", 'body_canvas', #{imageJson}, "255,255,255", 3.0, "raw_image");
         drawFace("drawing", 'face_canvas', #{faceJson}, "255,0,0", 0.6, "raw_image");
+        drawBox("drawing", 'detect_canvas', #{detectJson}, "255,0,255", 3.0, "raw_image");
         classify("scores", #{classificationJson});
         
 
