--- a/node/views/upload.jade
+++ b/node/views/upload.jade
@@ -35,7 +35,7 @@ block content
 		input(type="file", name="image", multiple="multiple")
 		button(type="submit", value="Upload") Batch
     
-	p Loads the image then calls the services asynchronosly (this uses a simple image-string and is unsuitable for large image files at the moment)
+	p Loads the image then calls the services asynchronosly
 	form(action="/show", method="post", enctype="multipart/form-data")
 		input(type="file", name="image")
 		button(type="submit", value="Upload") Show
